--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <div class="row spacing">
                     <div class="container">
                         <p data-aos="fade-right" class="fa-icons">
-                            <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                            <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/hackcbs/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/hackcbs/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/company/hackcbs"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/hackcbs"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         </p>
                     </div>
                 </div>
